blocks/hero-banner/hero-banner.css
.hero-banner-wrapper {
    max-width: var(--content-width-xxxl) !important;
}

.hero-banner-content {
    position: relative;
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    align-items: center;
}

.hero-banner-content-text {
    padding: 24px 16px;
    padding-top: 12px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.hero-banner-content-text h1 {
    margin-bottom: 8px;
}

.hero-banner-content-ctas {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: wrap;
    column-gap: 16px;
    padding-top: 16px;
}

.hero-banner-promo-badge {
    display: flex;
    margin-bottom: 20px;
    padding: 8px 16px;
    align-items: center;
    gap: 16px;
    border-radius: 4px;
    background-color: var(--color-accent-3);
    color: var(--color-text-tertiary);
}

.hero-banner-asset {
    width: 100%;
    height: 100%;
}

.hero-banner-asset-desktop {
    display: none;
}

.hero-banner-asset img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

/* Variants */
.hero-banner-secondary {
    background-color: var(--color-bg-secondary);
}

.hero-banner-tertiary {
    background-color: var(--color-bg-tertiary);
}

.hero-banner-tertiary .hero-banner-content-text h1,
.hero-banner-tertiary .hero-banner-content-text p {
    color: var(--color-white);
}

.hero-banner-tertiary .hero-banner-content-ctas a:not(.primary) {
    border-color: var(--color-white);
    background: transparent;
    color: var(--color-white);
}

.hero-banner-graphic .hero-banner-asset img {
    max-height: 76px;
    object-fit: contain;
    object-position: right;
}

.masked-image-wrapper {
    mask-image: url("/icons/hero-mask.svg");
    mask-repeat: no-repeat;
    mask-size: 100%;
}

@media screen and (min-width: 768px) {
    .hero-banner-content {
        flex-direction: row;
        align-items: flex-start;
    }

    .hero-banner-content-text {
        padding: 80px 0;
        padding-left: 40px;
        max-width: 700px;
    }

    .hero-banner-content-text h1 {
        margin: 16px 0;
    }

    .hero-banner-promo-badge {
        margin-bottom: 28px;
    }

    .hero-banner-content-ctas {
        column-gap: 24px;
        padding-top: 36px;
    }

    .hero-banner-asset {
        margin-bottom: 0;
        max-width: 838px;
        height: 70%;
    }

    .hero-banner-asset img {
        object-fit: cover;
        height: 70%;
    }

    /* Variants */
    .hero-banner-graphic .hero-banner-asset {
        max-height: 330px;
        width: 50%;
    }

    .hero-banner-graphic .hero-banner-asset img {
        object-position: top;
        max-height: 330px;
    }

    .hero-banner-graphic .hero-banner-content {
        align-items: flex-start;
    }

    .hero-banner-full .hero-banner-content {
        padding: 0 40px;
        flex-direction: column;
        align-items: center;
    }

    .hero-banner-full .hero-banner-content-text {
        text-align: center;
        align-items: center;
        padding-left: 0;
        max-width: 700px;
        z-index: 1;
    }

    .hero-banner-full .hero-banner-asset {
        position: absolute;
        max-width: 100%;
        height: 100%;
    }

    .hero-banner-full .hero-banner-asset img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
    }
}

@media screen and (min-width: 1200px) {
    .hero-banner-content-text {
        padding-left: 80px;
    }

    .hero-banner-asset {
        height: 545px;
    }

    .hero-banner-asset img {
        object-fit: contain;
        object-position: top;
        height: 545px;
    }
}

